ui fix overflows

--- a/client-side/src/views/Landing/landing.css
+++ b/client-side/src/views/Landing/landing.css
@@ -5,9 +5,6 @@
     color: white;
     padding: 10px;
 }
-body {
-    overflow: hidden;
-}
 
 ::-webkit-scrollbar {
     width: 10px;
@@ -30,26 +27,7 @@ body {
 }
 
 .main {
-    width: 100%;
-}
-
-.main-content {
-    padding: 0;
-    margin: 0;
     overflow-y: auto;
-    text-align: left;
-    padding: 2rem;
-    text-wrap: wrap;
-
-    @media screen and (min-device-width: 1024px) {
-        height: 40rem;
-    }
-    @media screen and (min-device-width: 600px) and (max-device-width: 1024px) {
-        height: 35rem;
-    }
-    @media screen and (min-device-width: 320px) and (max-device-width: 599px) {
-        height: 25rem;
-    }
 }
 
 .attached-items {
@@ -63,7 +41,6 @@ body {
 .content {
     background-color: #041220;
 }
-
 /* DESKTOP */
 @media (min-width:1024px) {
     p.selected {
@@ -72,7 +49,6 @@ body {
         border-left: 2px solid white;
         color: white;
     }
-
     .main {
         background: #041220;
         background-size: cover;
@@ -118,8 +94,18 @@ body {
     }
 
     .terminal-look {
+        height: 40rem;
+
+
         & {
             display: flex;
+        }
+
+        .main {
+
+            width: 100%;
+            text-align: left;
+            padding: 2rem
         }
 
         .sidebar {
@@ -165,12 +151,11 @@ body {
 /* Mobile */
 @media only screen and (min-device-width : 320px) and (max-device-width : 599px) {
     p.selected {
-        transition: all .5s ease-in-out;
+        transition:all .5s ease-in-out;
         background-color: #0a141e;
         border-bottom: 2px solid white;
         color: white;
     }
-
     .main {
         background: #041220;
         background-size: 100% 70%;
@@ -178,6 +163,11 @@ body {
         background-image: url("../../assets/bgsbox.png");
         animation: breath 3s ease-in-out infinite;
     }
+
+    body {
+        overflow: hidden;
+    }
+
     .title-bar:first-child {
         font-size: 1.5rem;
 
@@ -186,9 +176,7 @@ body {
     .terminal-look {
         height: 50rem;
 
-        .info-name {
-            font-size: 5rem;
-        }
+        
     }
 
     .sidebar {
@@ -221,7 +209,15 @@ body {
         width: 150px;
     }
 
-    .main .main-content>* {
+    .main {
+        text-wrap: wrap;
+        text-align: left;
+        overflow-y: auto;
+        max-height: 30rem;
+        width: 100%;
+    }
+
+    .main>* {
         margin-inline: 1rem;
     }
 
@@ -248,18 +244,20 @@ body {
         border-left: 2px solid white;
         color: white;
     }
-
     .main {
         background: #041220;
         background-size: 100% 40%;
         background-repeat: no-repeat;
         background-image: url("../../assets/bgsbox.png");
         animation: breath 3s ease-in-out infinite;
+        max-height: 50;
     }
-
     .terminal-look {
         display: flex;
+        height: 50rem;
+
     }
+
     .date-item:nth-of-type(1) {
 
         animation: move .5s;
@@ -283,14 +281,10 @@ body {
     }
 
     .main {
-        width: 100%;
+        width: 80%;
         text-align: left;
         text-wrap: wrap;
         padding: 2rem;
-
-        .info-name {
-            font-size: 5rem;
-        }
     }
 
     img {
